<resources>
    <string name="app_name">PrimerPrototipo</string>
    <string name="tvLogin">Iniciar sesión</string>
    <string name="tvBienvenidatxt">¡Bienvenido a GPS-BUS!</string>
    <string name="ingrese_su_cuenta">Ingrese su cuenta:</string>
    <string name="email">Ingrese su email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="click_registrarse">Registrarse</string>
    <string name="registro_nombre">Ingrese su nombre</string>
    <string name="registro_correo">usuario@gpsbus.com</string>
    <string name="registro_password">Crea una contraseña</string>
    <string name="confirmar_password">Repite tu contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="rastrear_autobus">Rastrear Autobús</string>
    <string name="bienvenido_chofer_007">Bienvenido chofer 007</string>
    <string name="tiempo_de_salida">Tiempo de salida:</string>
    <string name="pasajeros">pasajeros:</string>
    <string name="_10">10</string>
    <string name="siguiente_parada">Siguiente parada:</string>
    <string name="arroyo_hondo">Arroyo hondo</string>
    <string name="temporal_para_dirigir_a_otras_actividades_de_usuarios">Temporal para dirigir a otras actividades de usuarios</string>
    <string name="autobus">Autobus</string>
    <string name="gestionar_cuentas">Gestionar cuentas</string>
    <string name="buscar_usuario_por_correo">Buscar usuario por correo:</string>
    <string name="finalizar_operaci_n">Finalizar operación</string>
</resources>